[package]
name = "atsdb"
version = "0.1.0"
edition = "2021"
default-run = "server"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "benchmark-client"
path = "src/main.rs"

[dependencies]
hashbrown = "0.11.2"
datafusion = "6.0.0"
snafu = "0.7.0-beta.1"
tokio = { version = "1.11.0", features = ["full"] }
regex = "1.5.4"
async-recursion = "0.3.2"
async-trait = "0.1.51"
chrono = "0.4"
mimalloc = { version = "0.1.27", default-features = false }
tonic = "0.6.1"
prost = "0.9"
num_cpus = "1.13.0"

[build-dependencies]
tonic-build = "0.6"
